tdf#147089 - Round Integral Division (IDIV) literals to Integer values

Change-Id: Ia243c6117a437d0c6efb33a4e76c5e9ee539fbdc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130302
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 3ba8b56b32c203326b776b940d20b16eb2340835)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130315
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>